--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "proxy": "http://localhost:5000",
+    "homepage": "https: //github.com/AlexandrinaS/Alexandrina_Ion",
     "dependencies": {
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
@@ -18,7 +19,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -39,6 +42,7 @@
         ]
     },
     "devDependencies": {
+        "gh-pages": "^6.3.0",
         "sass": "^1.89.2"
     }
 }
