--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "frontend",
+    "name": "alexandrina_ion",
     "version": "0.1.0",
     "private": true,
     "proxy": "http://localhost:5000",
-    "homepage": "https://github.com/AlexandrinaS/Alexandrina_Ion",
+    "homepage": "https://alexandrinas.github.io/Alexandrina_Ion",
     "dependencies": {
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
